Raise the minimum supported version of Java to 17
Closes gh-749